--- a/condominio/app/templates/app/home.html
+++ b/condominio/app/templates/app/home.html
@@ -1,4 +1,5 @@
 {% extends 'app/base.html'%}
+{% load static %}
 {%block contenido %}
 <link href="https://fonts.cdnfonts.com/css/dragonLord" rel="stylesheet">
    
