--- a/condominio/app/templates/registration/login.html
+++ b/condominio/app/templates/registration/login.html
@@ -8,7 +8,25 @@
     <title>iniciar sesion</title>
 </head>
 <body>
-    
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h2>ingrese sus credenciales</h2>
+                        <hr>
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            {{form}}
+                            <input type="submit" value="ingresar">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </html>
